tests/baselines/reference/inferRestArgumentsMappedTuple.errors.txt
tests/cases/compiler/inferRestArgumentsMappedTuple.ts(16,7): error TS2322: Type '[unknown, unknown]' is not assignable to type '[string, number]'.
  Type at position 0 in source is not compatible with type at position 0 in target.
    Type 'unknown' is not assignable to type 'string'.


==== tests/cases/compiler/inferRestArgumentsMappedTuple.ts (1 errors) ====
    type MyMappedType<Primitive extends any> = {
    	primitive: Primitive;
    };
    
    type TupleMapperOld<Tuple extends any[]> = {
    	[Key in keyof Tuple]: Tuple[Key] extends Tuple[number] ? MyMappedType<Tuple[Key]> : never;
    };
    
    // [MyMappedType<string>, MyMappedType<number>]
    type MyMappedTupleOld = TupleMapperOld<[string, number]>;
    //    ^?
    
    declare function extractPrimitivesOld<Tuple extends any[]>(...mappedTypes: TupleMapperOld<Tuple>): Tuple;
    
    // [string, number]
    const myPrimitiveTupleOld: [string, number] = extractPrimitivesOld({ primitive: "" }, { primitive: 0 });
          ~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '[unknown, unknown]' is not assignable to type '[string, number]'.
!!! error TS2322:   Type at position 0 in source is not compatible with type at position 0 in target.
!!! error TS2322:     Type 'unknown' is not assignable to type 'string'.
    